# llm-guided-mod-optimization

./: .endday.env  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  PHASE4_DIAGNOSTIC_GUIDE.md  README.md  analysis_20260404.md  analyze_results.py  check_llm_api.py  dataCommon.py  dependencies.yml  edgeUavScenarioGenerator.py  phase4_acceptance.sh  pyproject.toml  scenarioGenerator.py  testAll.py  testEdgeUav.py  test_phase6_integration.py  基本原理.md  横坐标任务数 消融实验.csv
.claude/: CLAUDE.md  settings.local.json
.gemini/: AGENTS.md
config/: config.py  firstLevelExample.py  setting.cfg  setting_v1_single_slot_debug.cfg  setting_v2_single_slot_main.cfg  setting_v3_single_slot_stress.cfg
edge_uav/: __init__.py  data.py  scenario_generator.py
heuristics/: hsFrame.py  hsIndividual.py  hsIndividualEdgeUav.py  hsIndividualMultiCall.py  hsIndividualRandom.py  hsPopulation.py  hsSorting.py  hsUtils.py  hs_way_constants.py
legacy_mod/: __init__.py  dataCommon.py  scenarioGenerator.py
llmAPI/: llmInterface.py  llmInterface_huggingface.py
model/: milpModel.py
plans/: chapter3-system-model-plan.md  phase6-step3-socp-fix-plan.md  phase6-step4-integration-verification-strategy.md  phase6-step4-quick-validation-plan.md  ship-shore-uav-llm-analysis.md
prompt/: basicPrompt.py  edgeUavModPrompt.py  edgeUavPrompt.py  modPrompt.py
scripts/: README.md  __init__.py  analyze_results.py  check_llm_api.py  debug_traj_unbounded.py  diagnose_edge_uav_bcd.py  diagnose_offload_feasibility.py  docx_to_md.py  generate_prompt_template_docx.py  plot_d1_trajectory.py  plot_optimization_curves.py  (+14 more)
(+903 files in other folders)
