[project]
name = "llm-guided-mod-optimization"
version = "0.1.0"
description = "LLM-guided optimization for MoD and Edge-UAV experiments"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "configobj>=5.0.9",
    "python-dotenv>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "joblib>=1.5.2",
    "gurobipy>=12.0.3",
    "cvxpy>=1.7.2",
    "ecos>=2.0.14",
    "scs>=3.2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
embeddings = [
    "sentence-transformers>=5.1.0",
]

[tool.uv]
package = false
